saves Author name to session

--- a/MvcWebApplication/Views/Home/Index.cshtml
+++ b/MvcWebApplication/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 @using(Html.BeginForm()) {
     <p>
         Name: <input type="text" name="Author">
-        <button type="submit">Search</button>
+        <button type="submit">Show only mine</button>
     </p>
 }
 
